--- a/index.html
+++ b/index.html
@@ -1,9 +1,27 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
   <head>
-    <title></title>
+    <meta charset="UTF-8">
+    <title>Leon's Tic-Tac-Toe</title>
+    <link rel="stylesheet" href="stylesheets/app.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="scripts/game.js" charset="utf-8"></script>
   </head>
   <body>
+    <FORM NAME="tic" method="post">
+    <section id="board">
+      <div name="one" class="square" value = " "></div>
+      <div name="two" class="square" value = " "></div>
+      <div name="three" class="square" value = " "></div>
 
+      <div name="four" class="square" value = " "></div>
+      <div name="five" class="square" value = " "></div>
+      <div name="six" class="square" value = " "></div>
+
+      <div name="seven" class="square" value = " "></div>
+      <div name="eight" class="square" value = " "></div>
+      <div name="nine" class="square" value = " "></div>
+    </section>
+  </form>
   </body>
 </html>
