--- a/index.html
+++ b/index.html
@@ -3,25 +3,20 @@
   <head>
     <meta charset="UTF-8">
     <title>Leon's Tic-Tac-Toe</title>
+    <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="stylesheets/app.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="scripts/game.js" charset="utf-8"></script>
+    <script src="scripts/2ndattempt.js" charset="utf-8"></script>
   </head>
   <body>
-    <FORM NAME="tic" method="post">
-    <section id="board">
-      <div name="one" class="square" value = " "></div>
-      <div name="two" class="square" value = " "></div>
-      <div name="three" class="square" value = " "></div>
-
-      <div name="four" class="square" value = " "></div>
-      <div name="five" class="square" value = " "></div>
-      <div name="six" class="square" value = " "></div>
-
-      <div name="seven" class="square" value = " "></div>
-      <div name="eight" class="square" value = " "></div>
-      <div name="nine" class="square" value = " "></div>
-    </section>
-  </form>
+    <div id="modal">
+      <div class="start">
+        <img src="http://upload.wikimedia.org/wikipedia/commons/8/89/Jogo_da_velha_-_tic_tac_toe.png" \><br>
+      <input></input>
+      </div>
+    </div>
+    <h2 id="playerOne"></h2>
+    <section id="board"></section>
+    <h2 id="playerTwo"></h2>
   </body>
 </html>
